
# Test List<T>
#add_executable(insert_destruct_list insert_destruct_test.cpp)
#target_link_libraries(insert_destruct_list algoList)
#add_test(insert_destruct_list insert_destruct)

#add_executable(insert_remove_list insert_delete_rounds.cpp)
#target_link_libraries(insert_remove_list algoList)
#add_test(insert_remove_list insert_remove)



